--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "express": "^4.15.3"
   },
   "devDependencies": {
+    "chai": "^4.1.0",
+    "chai-http": "^3.0.0",
+    "mocha": "^3.4.2",
     "nodemon": "^1.11.0"
   }
 }
