--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build": "webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -17,9 +18,17 @@
   },
   "homepage": "https://github.com/sslampa/express-rest-api#readme",
   "dependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.17.2",
+    "css-loader": "^0.28.4",
     "express": "^4.15.3",
-    "mongoose": "^4.11.3"
+    "mongoose": "^4.11.3",
+    "vue": "^2.4.2",
+    "vue-loader": "^12.2.2",
+    "vue-template-compiler": "^2.4.2",
+    "webpack": "^3.3.0"
   },
   "devDependencies": {
     "chai": "^4.1.0",
