--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "build": "webpack --watch"
+    "build": "webpack --watch",
+    "test": "webpack && mocha --recursive test/"
   },
   "repository": {
     "type": "git",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "chai": "^4.1.0",
     "chai-http": "^3.0.0",
+    "eslint": "^4.3.0",
     "mocha": "^3.4.2",
     "nodemon": "^1.11.0"
   }
